traffic-mgmt/route-rule-review-traffic-shifting.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: default
spec:
  hosts:
  - reviews.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews.default.svc.cluster.local
        subset: v3
      weight: 75
    - destination:
        host: reviews.default.svc.cluster.local
        subset: v2
      weight: 25
---
